<resources>
    <string name="app_name">Be The Richest</string>
    <string name="not_enough_money">You don\'t have enough money</string>
    <string name="no_upgrades_available">No upgrades available</string>
    <string name="win_amount">Win amount</string>
    <string name="chance">Chance</string>
    <string name="total">Total</string>
    <string name="investments">Investments</string>
    <string name="upgrades">Upgrades</string>
    <string name="gambling">Gambling</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="gambling_no_win">You won nothing</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="be_the_richest">Be The Richest</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="ads">Watch ad for </string>
    <string name="video_load">Loading video …</string>
    <string name="boosters">Boosters</string>
    <string name="achievements">Achievements</string>
    <string name="total_clicks">Total Clicks</string>
    <string name="total_money_from_clicks">Total Money From Clicks</string>
    <string name="total_money_collected">Total Money Collected</string>
    <string name="total_playing_time">Total Playing Time</string>
    <string name="money_spent">Money Spent</string>
    <string name="total_gambling">Number of Gamblings</string>
    <string name="gambling_wins">Gambling Wins</string>
    <string name="gambling_loses">Gambling Loses</string>
    <string name="money_from_gambling">Money From Gambling</string>
    <string name="money_spent_on_gambling">Money Spent On Gambling</string>
    <string name="gambling_balance">Gambling Balance</string>
    <string name="total_investment_levels">Total Investment Levels</string>
    <string name="upgrades_bought">Upgrades Bought</string>
    <string name="first_dollar">First Dollar</string>
    <string name="highest_money">Highest Money</string>
    <string name="price">Price</string>
    <string name="locked">LOCKED</string>
    <string name="profile">My Profile</string>
    <string name="purchase_cancelled">Purchase cancelled</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="purchase_successful">Purchase successful</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="check_net_connection">Please check your internet connection!</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="remove_ads">Removing ads not implemented yet</string>
    <string name="videos_wathced">Videos Watched</string>
    <string name="money_from_videos">Money From Videos</string>
    <string name="achievement_unlocked">ACHIEVEMENT UNLOCKED</string>
    <string name="achievements_unlocked">Achievements Unlocked</string>
    <string name="server_client_id">155780683287-uq121kn0cfmipsjgotumobb2eau99b2a.apps.googleusercontent.com</string>
    <string name="money_from_investments">Money From Investments</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="about_infos">Copyright © 2018 Be The Richest\nContact email: unidevoes@gmail.com\nAll Rights Reserved</string>
    <string name="login_warn">You are not logged in.\nSign in with your Google Account!</string>
    <string name="sign_out">Sign out</string>
    <string name="ads_by_google">Ads by Google</string>
</resources>
