<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_boosters"
            android:icon="@drawable/ic_boosters"
            android:title="@string/boosters" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_stars"
            android:title="@string/achievements" />
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_movies"
            android:title="@string/ads" />
    </group>
    <group
        android:id="@+id/menu_second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>